feat(Developement): :sparkles: RocketSeat > Ignite > Chapter 01 > Aula 04
Configurando Babel

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,4 +24,12 @@
 
   "javascript.suggest.autoImports": true,
   "typescript.suggest.autoImports": true,
+  "conventionalCommits.scopes": [
+    "Personas",
+    "DataFixtures",
+    "PHPUnit Testes Automatizados",
+    "SGED",
+    "MIDIA",
+    "Developement"
+  ],
 }
